force-app/main/default/objects/GPMS_Care_Type_History__c/GPMS_Care_Type_History__c.object-meta.xml
<CustomObject>
    <description>Stores care type status history</description>
    <label>Care Type History</label>
    <nameField>
        <displayFormat>CTH-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Care Type History</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>