force-app/main/default/objects/GPMS_Care_Type_History__c/fields/GPMS_Care_Type__c.field-meta.xml
<CustomField>
    <fullName>GPMS_Care_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Look up to Care Type object</description>
    <label>Care Type</label>
    <referenceTo>Care_Type__c</referenceTo>
    <relationshipLabel>Care Type History</relationshipLabel>
    <relationshipName>Care_Type_History</relationshipName>
    <type>Lookup</type>
</CustomField>