force-app/main/default/objects/GPMS_Care_Type_History__c/fields/GPMS_Care_Type_Status__c.field-meta.xml
<CustomField>
    <fullName>GPMS_Care_Type_Status__c</fullName>
    <label>Care Type Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>