force-app/main/default/objects/GPMS_Care_Type_History__c/fields/GPMS_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>GPMS_Effective_Date__c</fullName>
    <label>Effective Date</label>
    <type>Date</type>
</CustomField>